# rs1_robot

./: .gitignore  CMakeLists.txt  Doxyfile  NAV2_RRT_IMPLEMENTATION_GUIDE.md  README.md  comp_drone_spawner.sh  enable_all_missions.sh  index.dox  install_rs1_robot_dependencies.sh  launch_multi_drone_simple.sh  matt_readme.md  monitor_missions.sh  package.xml  send_missions.sh  stop_all_missions.sh
config/: adaptive_drone_config.yaml  drone.yaml  drone_swarm_visualisation.rviz  gazebo_bridge.yaml  minimal_static_environment.yaml  multi_drone_config.yaml  nav2_params.yaml  waypoints.yaml
doc/html/: annotated.html  annotated_dup.js  classdrone__swarm_1_1DroneControl-members.html  classdrone__swarm_1_1DroneControl.html  classdrone__swarm_1_1DroneControl.js  classdrone__swarm_1_1DroneControl__coll__graph.map  classdrone__swarm_1_1DroneControl_a1ed0fd64d680c92d499f861e54fbb9b6_cgraph.map  classdrone__swarm_1_1DroneControl_a1ed0fd64d680c92d499f861e54fbb9b6_cgraph.md5  classdrone__swarm_1_1DroneControl_a5daa42996119115c1874f8f00b3ca3dc_icgraph.map  classdrone__swarm_1_1DroneControl_a5daa42996119115c1874f8f00b3ca3dc_icgraph.md5  classdrone__swarm_1_1DroneControl_a7bfdc1b6e600b594da6444c6fdb85537_cgraph.map  classdrone__swarm_1_1DroneControl_a7bfdc1b6e600b594da6444c6fdb85537_cgraph.md5  classdrone__swarm_1_1DroneControl_a8287886eb5f79f7f5ed7db5e730546a3_cgraph.map  classdrone__swarm_1_1DroneControl_a8287886eb5f79f7f5ed7db5e730546a3_cgraph.md5  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_cgraph.map  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_cgraph.md5  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_icgraph.map  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_icgraph.md5  classdrone__swarm_1_1DroneControl_ab4736267eb5c8c10ba58f85bc908b42c_icgraph.map  classdrone__swarm_1_1DroneControl_ab4736267eb5c8c10ba58f85bc908b42c_icgraph.md5  classdrone__swarm_1_1DroneControl_ad41e34dd67d09b987becab1e72cebdc9_icgraph.map  classdrone__swarm_1_1DroneControl_ad41e34dd67d09b987becab1e72cebdc9_icgraph.md5  classdrone__swarm_1_1DroneControl_af2646a93010d6fc9ec406df3d4b677c8_cgraph.map  classdrone__swarm_1_1DroneControl_af2646a93010d6fc9ec406df3d4b677c8_cgraph.md5  classdrone__swarm_1_1DroneControllerNode-members.html  classdrone__swarm_1_1DroneControllerNode.html  classdrone__swarm_1_1DroneControllerNode.js  classdrone__swarm_1_1DroneControllerNode__coll__graph.map  classdrone__swarm_1_1DroneControllerNode__coll__graph.md5  classdrone__swarm_1_1MissionExecutor-members.html  classdrone__swarm_1_1MissionExecutor.html  classdrone__swarm_1_1MissionExecutor.js  classdrone__swarm_1_1MissionExecutor__coll__graph.map  classdrone__swarm_1_1MissionExecutor_a3a6b15b9f2f6bed51345c1cb27315ddf_cgraph.map  classdrone__swarm_1_1MissionExecutor_a3a6b15b9f2f6bed51345c1cb27315ddf_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a65b44e72318c322519263f1fba0b6582_cgraph.map  classdrone__swarm_1_1MissionExecutor_a65b44e72318c322519263f1fba0b6582_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a8055bc1f37d70df43b365f14a5e2aa7b_cgraph.map  classdrone__swarm_1_1MissionExecutor_a8055bc1f37d70df43b365f14a5e2aa7b_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a86caeefa08b2d6121dea6952e9175b85_cgraph.map  (+250 more)
doc/latex/: annotated.tex  classdrone__swarm_1_1DroneControl.tex  classdrone__swarm_1_1DroneControl__coll__graph.md5  classdrone__swarm_1_1DroneControl_a1ed0fd64d680c92d499f861e54fbb9b6_cgraph.md5  classdrone__swarm_1_1DroneControl_a5daa42996119115c1874f8f00b3ca3dc_icgraph.md5  classdrone__swarm_1_1DroneControl_a7bfdc1b6e600b594da6444c6fdb85537_cgraph.md5  classdrone__swarm_1_1DroneControl_a8287886eb5f79f7f5ed7db5e730546a3_cgraph.md5  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_cgraph.md5  classdrone__swarm_1_1DroneControl_a987a901653f7c7201a764180c6421701_icgraph.md5  classdrone__swarm_1_1DroneControl_ab4736267eb5c8c10ba58f85bc908b42c_icgraph.md5  classdrone__swarm_1_1DroneControl_ad41e34dd67d09b987becab1e72cebdc9_icgraph.md5  classdrone__swarm_1_1DroneControl_af2646a93010d6fc9ec406df3d4b677c8_cgraph.md5  classdrone__swarm_1_1DroneControllerNode.tex  classdrone__swarm_1_1DroneControllerNode__inherit__graph.md5  classdrone__swarm_1_1MissionExecutor.tex  classdrone__swarm_1_1MissionExecutor__coll__graph.md5  classdrone__swarm_1_1MissionExecutor_a3a6b15b9f2f6bed51345c1cb27315ddf_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a65b44e72318c322519263f1fba0b6582_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a8055bc1f37d70df43b365f14a5e2aa7b_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a86caeefa08b2d6121dea6952e9175b85_cgraph.md5  classdrone__swarm_1_1MissionExecutor_a9d47e2949ef7fa34c3332b2628d3aad1_cgraph.md5  classdrone__swarm_1_1MissionPlannerNode.tex  classdrone__swarm_1_1PIDController.tex  (+88 more)
include/: common.h  controller.h  drone_control.h  drone_manager.h  drone_node.h  graph.h  laserprocessing.h  mission_node.h  pid.h  sensor_node.h  sensor_processor.h  terrain_map.h  theta_star_path_planner.h  waypoint_nav_node.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: multi_drone_spawn.launch.py  rs1_drone_spawner.py  rs1_robot_ignition.py  rs1_robot_world.py  rs1_swarm_composed.py  swarm_only.py  test_simple_planner.py
log/: latest_build
scripts/: costmap_diagnostic.py  generate_dynamic_bridge.py  swarm_status_checker.py  test_swarm_coordination.py
src/: common.cpp  controller.cpp  drone_control.cpp  drone_main.cpp  drone_manager.cpp  drone_node.cpp  laserprocessing.cpp  main_composition.cpp  mission_executor.cpp  mission_node.cpp  multi_drone_controller_node.cpp  path_planner.cpp  pid.cpp  sensor_main.cpp  sensor_node.cpp  sensor_processor.cpp  state_machine.cpp  terrain_map.cpp  theta_star_path_planner.cpp  waypoint_nav_node.cpp  waypoint_planner.cpp
srv/: ReactToDebris.srv  ReactToHiker.srv  ReactToWildfire.srv
test/: test_theta_star_path_planner.cpp
urdf/: rs1_drone.urdf.xacro  rs1_drone_adaptive.urdf.xacro  sjtu_drone.urdf.xacro
worlds/: simple_trees_builtin.sdf
(+115 files in other folders)
